// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/select/demo/Automatic-tokenization.js correctly test 1`] = `
<div
  class="jc-select jc-select-enabled"
  style="width:100%"
>
  <div
    aria-autocomplete="list"
    aria-expanded="false"
    aria-haspopup="true"
    class="jc-select-selection
            jc-select-selection--multiple"
    role="combobox"
  >
    <div
      class="jc-select-selection__rendered"
    >
      <ul>
        <li
          class="jc-select-search jc-select-search--inline"
        >
          <div
            class="jc-select-search__field__wrap"
          >
            <input
              autocomplete="off"
              class="jc-select-search__field"
              value=""
            />
            <span
              class="jc-select-search__field__mirror"
            >
               
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`renders ./components/select/demo/Basic.js correctly test 1`] = `
<div>
  <div
    class="jc-select jc-select-enabled"
    style="width:120px"
  >
    <div
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="true"
      class="jc-select-selection
            jc-select-selection--single"
      role="combobox"
      tabindex="0"
    >
      <div
        class="jc-select-selection__rendered"
      >
        <div
          class="jc-select-selection-selected-value"
          style="display:block;opacity:1"
          title="Lucy"
        >
          Lucy
        </div>
      </div>
      <span
        class="jc-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="unselectable"
      >
        <b />
      </span>
    </div>
  </div>
  <div
    class="jc-select jc-select-disabled jc-select-allow-clear"
    style="width:120px"
  >
    <div
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="true"
      class="jc-select-selection
            jc-select-selection--single"
      role="combobox"
      tabindex="-1"
    >
      <div
        class="jc-select-selection__rendered"
      >
        <div
          class="jc-select-selection-selected-value"
          style="display:block;opacity:1"
          title="Lucy"
        >
          Lucy
        </div>
      </div>
      <span
        class="jc-select-selection__clear"
        style="user-select:none;-webkit-user-select:none"
        unselectable="unselectable"
      />
      <span
        class="jc-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="unselectable"
      >
        <b />
      </span>
    </div>
  </div>
</div>
`;

exports[`renders ./components/select/demo/Combobox.js correctly test 1`] = `
<div
  class="jc-select jc-select-combobox jc-select-enabled"
  style="width:200px"
>
  <div
    aria-autocomplete="list"
    aria-expanded="false"
    aria-haspopup="true"
    class="jc-select-selection
            jc-select-selection--single"
    role="combobox"
  >
    <div
      class="jc-select-selection__rendered"
    >
      <div
        class="jc-select-selection__placeholder"
        style="display:block;user-select:none;-webkit-user-select:none"
        unselectable="unselectable"
      >
        Enter the account name
      </div>
      <ul>
        <li
          class="jc-select-search jc-select-search--inline"
        >
          <div
            class="jc-select-search__field__wrap"
          >
            <input
              autocomplete="off"
              class="jc-select-search__field"
              value=""
            />
            <span
              class="jc-select-search__field__mirror"
            >
               
            </span>
          </div>
        </li>
      </ul>
    </div>
    <span
      class="jc-select-arrow"
      style="user-select:none;-webkit-user-select:none"
      unselectable="unselectable"
    >
      <b />
    </span>
  </div>
</div>
`;

exports[`renders ./components/select/demo/Coordinate.js correctly test 1`] = `
<div>
  <div
    class="jc-select jc-select-enabled"
    style="width:90px"
  >
    <div
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="true"
      class="jc-select-selection
            jc-select-selection--single"
      role="combobox"
      tabindex="0"
    >
      <div
        class="jc-select-selection__rendered"
      >
        <div
          class="jc-select-selection-selected-value"
          style="display:block;opacity:1"
          title="Zhejiang"
        >
          Zhejiang
        </div>
      </div>
      <span
        class="jc-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="unselectable"
      >
        <b />
      </span>
    </div>
  </div>
  <div
    class="jc-select jc-select-enabled"
    style="width:90px"
  >
    <div
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="true"
      class="jc-select-selection
            jc-select-selection--single"
      role="combobox"
      tabindex="0"
    >
      <div
        class="jc-select-selection__rendered"
      >
        <div
          class="jc-select-selection-selected-value"
          style="display:block;opacity:1"
          title="Hangzhou"
        >
          Hangzhou
        </div>
      </div>
      <span
        class="jc-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="unselectable"
      >
        <b />
      </span>
    </div>
  </div>
</div>
`;

exports[`renders ./components/select/demo/Label-in-value.js correctly test 1`] = `
<div
  class="jc-select jc-select-enabled"
  style="width:120px"
>
  <div
    aria-autocomplete="list"
    aria-expanded="false"
    aria-haspopup="true"
    class="jc-select-selection
            jc-select-selection--single"
    role="combobox"
    tabindex="0"
  >
    <div
      class="jc-select-selection__rendered"
    >
      <div
        class="jc-select-selection-selected-value"
        style="display:block;opacity:1"
        title="Lucy (101)"
      >
        Lucy (101)
      </div>
    </div>
    <span
      class="jc-select-arrow"
      style="user-select:none;-webkit-user-select:none"
      unselectable="unselectable"
    >
      <b />
    </span>
  </div>
</div>
`;

exports[`renders ./components/select/demo/Multiple.js correctly test 1`] = `
<div
  class="jc-select jc-select-enabled"
  style="width:100%"
>
  <div
    aria-autocomplete="list"
    aria-expanded="false"
    aria-haspopup="true"
    class="jc-select-selection
            jc-select-selection--multiple"
    role="combobox"
  >
    <div
      class="jc-select-selection__rendered"
    >
      <div
        class="jc-select-selection__placeholder"
        style="display:none;user-select:none;-webkit-user-select:none"
        unselectable="unselectable"
      >
        Please select
      </div>
      <ul>
        <li
          class="jc-select-selection__choice"
          style="user-select:none;-webkit-user-select:none"
          title="a10"
          unselectable="unselectable"
        >
          <div
            class="jc-select-selection__choice__content"
          >
            a10
          </div>
          <span
            class="jc-select-selection__choice__remove"
          />
        </li>
        <li
          class="jc-select-selection__choice"
          style="user-select:none;-webkit-user-select:none"
          title="c12"
          unselectable="unselectable"
        >
          <div
            class="jc-select-selection__choice__content"
          >
            c12
          </div>
          <span
            class="jc-select-selection__choice__remove"
          />
        </li>
        <li
          class="jc-select-search jc-select-search--inline"
        >
          <div
            class="jc-select-search__field__wrap"
          >
            <input
              autocomplete="off"
              class="jc-select-search__field"
              value=""
            />
            <span
              class="jc-select-search__field__mirror"
            >
               
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`renders ./components/select/demo/Optgroup.js correctly test 1`] = `
<div
  class="jc-select jc-select-enabled"
  style="width:200px"
>
  <div
    aria-autocomplete="list"
    aria-expanded="false"
    aria-haspopup="true"
    class="jc-select-selection
            jc-select-selection--single"
    role="combobox"
    tabindex="0"
  >
    <div
      class="jc-select-selection__rendered"
    >
      <div
        class="jc-select-selection-selected-value"
        style="display:block;opacity:1"
        title="Lucy"
      >
        Lucy
      </div>
    </div>
    <span
      class="jc-select-arrow"
      style="user-select:none;-webkit-user-select:none"
      unselectable="unselectable"
    >
      <b />
    </span>
  </div>
</div>
`;

exports[`renders ./components/select/demo/Search.js correctly test 1`] = `
<div
  class="jc-select jc-select-enabled"
  style="width:200px"
>
  <div
    aria-autocomplete="list"
    aria-expanded="false"
    aria-haspopup="true"
    class="jc-select-selection
            jc-select-selection--single"
    role="combobox"
    tabindex="0"
  >
    <div
      class="jc-select-selection__rendered"
    >
      <div
        class="jc-select-selection__placeholder"
        style="display:block;user-select:none;-webkit-user-select:none"
        unselectable="unselectable"
      >
        Select a person
      </div>
      <div
        class="jc-select-search jc-select-search--inline"
        style="display:none"
      >
        <div
          class="jc-select-search__field__wrap"
        >
          <input
            autocomplete="off"
            class="jc-select-search__field"
            value=""
          />
          <span
            class="jc-select-search__field__mirror"
          >
             
          </span>
        </div>
      </div>
    </div>
    <span
      class="jc-select-arrow"
      style="user-select:none;-webkit-user-select:none"
      unselectable="unselectable"
    >
      <b />
    </span>
  </div>
</div>
`;

exports[`renders ./components/select/demo/Search-box.js correctly test 1`] = `
<div
  class="jc-select jc-select-combobox jc-select-enabled"
>
  <div
    aria-autocomplete="list"
    aria-expanded="false"
    aria-haspopup="true"
    class="jc-select-selection
            jc-select-selection--single"
    role="combobox"
  >
    <div
      class="jc-select-selection__rendered"
    >
      <ul>
        <li
          class="jc-select-search jc-select-search--inline"
        >
          <div
            class="jc-select-search__field__wrap"
          >
            <input
              autocomplete="off"
              class="jc-select-search__field"
              value=""
            />
            <span
              class="jc-select-search__field__mirror"
            >
               
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`renders ./components/select/demo/Select-users.js correctly test 1`] = `
<div
  class="jc-select jc-select-enabled"
  style="width:100%"
>
  <div
    aria-autocomplete="list"
    aria-expanded="false"
    aria-haspopup="true"
    class="jc-select-selection
            jc-select-selection--multiple"
    role="combobox"
  >
    <div
      class="jc-select-selection__rendered"
    >
      <div
        class="jc-select-selection__placeholder"
        style="display:block;user-select:none;-webkit-user-select:none"
        unselectable="unselectable"
      >
        Select users
      </div>
      <ul>
        <li
          class="jc-select-search jc-select-search--inline"
        >
          <div
            class="jc-select-search__field__wrap"
          >
            <input
              autocomplete="off"
              class="jc-select-search__field"
              value=""
            />
            <span
              class="jc-select-search__field__mirror"
            >
               
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`renders ./components/select/demo/Size.js correctly test 1`] = `
<div>
  <div
    class="jc-radio-group"
  >
    <label
      class="jc-radio-button-wrapper"
    >
      <span
        class="jc-radio-button"
      >
        <input
          class="jc-radio-button-input"
          type="radio"
          value="large"
        />
        <span
          class="jc-radio-button-inner"
        />
      </span>
      <span>
        Large
      </span>
    </label>
    <label
      class="jc-radio-button-wrapper jc-radio-button-wrapper-checked"
    >
      <span
        class="jc-radio-button jc-radio-button-checked"
      >
        <input
          checked=""
          class="jc-radio-button-input"
          type="radio"
          value="default"
        />
        <span
          class="jc-radio-button-inner"
        />
      </span>
      <span>
        Default
      </span>
    </label>
    <label
      class="jc-radio-button-wrapper"
    >
      <span
        class="jc-radio-button"
      >
        <input
          class="jc-radio-button-input"
          type="radio"
          value="small"
        />
        <span
          class="jc-radio-button-inner"
        />
      </span>
      <span>
        Small
      </span>
    </label>
  </div>
  <br />
  <br />
  <div
    class="jc-select jc-select-enabled"
    style="width:200px"
  >
    <div
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="true"
      class="jc-select-selection
            jc-select-selection--single"
      role="combobox"
      tabindex="0"
    >
      <div
        class="jc-select-selection__rendered"
      >
        <div
          class="jc-select-selection-selected-value"
          style="display:block;opacity:1"
          title="a1"
        >
          a1
        </div>
      </div>
      <span
        class="jc-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="unselectable"
      >
        <b />
      </span>
    </div>
  </div>
  <br />
  <div
    class="jc-select jc-select-combobox jc-select-enabled"
    style="width:200px"
  >
    <div
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="true"
      class="jc-select-selection
            jc-select-selection--single"
      role="combobox"
    >
      <div
        class="jc-select-selection__rendered"
      >
        <ul>
          <li
            class="jc-select-search jc-select-search--inline"
          >
            <div
              class="jc-select-search__field__wrap"
            >
              <input
                autocomplete="off"
                class="jc-select-search__field"
                value="a1"
              />
              <span
                class="jc-select-search__field__mirror"
              >
                a1 
              </span>
            </div>
          </li>
        </ul>
      </div>
      <span
        class="jc-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="unselectable"
      >
        <b />
      </span>
    </div>
  </div>
  <br />
  <div
    class="jc-select jc-select-enabled"
    style="width:100%"
  >
    <div
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="true"
      class="jc-select-selection
            jc-select-selection--multiple"
      role="combobox"
    >
      <div
        class="jc-select-selection__rendered"
      >
        <div
          class="jc-select-selection__placeholder"
          style="display:none;user-select:none;-webkit-user-select:none"
          unselectable="unselectable"
        >
          Please select
        </div>
        <ul>
          <li
            class="jc-select-selection__choice"
            style="user-select:none;-webkit-user-select:none"
            title="a10"
            unselectable="unselectable"
          >
            <div
              class="jc-select-selection__choice__content"
            >
              a10
            </div>
            <span
              class="jc-select-selection__choice__remove"
            />
          </li>
          <li
            class="jc-select-selection__choice"
            style="user-select:none;-webkit-user-select:none"
            title="c12"
            unselectable="unselectable"
          >
            <div
              class="jc-select-selection__choice__content"
            >
              c12
            </div>
            <span
              class="jc-select-selection__choice__remove"
            />
          </li>
          <li
            class="jc-select-search jc-select-search--inline"
          >
            <div
              class="jc-select-search__field__wrap"
            >
              <input
                autocomplete="off"
                class="jc-select-search__field"
                value=""
              />
              <span
                class="jc-select-search__field__mirror"
              >
                 
              </span>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <br />
  <div
    class="jc-select jc-select-enabled"
    style="width:100%"
  >
    <div
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="true"
      class="jc-select-selection
            jc-select-selection--multiple"
      role="combobox"
    >
      <div
        class="jc-select-selection__rendered"
      >
        <div
          class="jc-select-selection__placeholder"
          style="display:none;user-select:none;-webkit-user-select:none"
          unselectable="unselectable"
        >
          Please select
        </div>
        <ul>
          <li
            class="jc-select-selection__choice"
            style="user-select:none;-webkit-user-select:none"
            title="a10"
            unselectable="unselectable"
          >
            <div
              class="jc-select-selection__choice__content"
            >
              a10
            </div>
            <span
              class="jc-select-selection__choice__remove"
            />
          </li>
          <li
            class="jc-select-selection__choice"
            style="user-select:none;-webkit-user-select:none"
            title="c12"
            unselectable="unselectable"
          >
            <div
              class="jc-select-selection__choice__content"
            >
              c12
            </div>
            <span
              class="jc-select-selection__choice__remove"
            />
          </li>
          <li
            class="jc-select-search jc-select-search--inline"
          >
            <div
              class="jc-select-search__field__wrap"
            >
              <input
                autocomplete="off"
                class="jc-select-search__field"
                value=""
              />
              <span
                class="jc-select-search__field__mirror"
              >
                 
              </span>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/select/demo/Tags.js correctly test 1`] = `
<div
  class="jc-select jc-select-enabled"
  style="width:100%"
>
  <div
    aria-autocomplete="list"
    aria-expanded="false"
    aria-haspopup="true"
    class="jc-select-selection
            jc-select-selection--multiple"
    role="combobox"
  >
    <div
      class="jc-select-selection__rendered"
    >
      <div
        class="jc-select-selection__placeholder"
        style="display:block;user-select:none;-webkit-user-select:none"
        unselectable="unselectable"
      >
        Tags Mode
      </div>
      <ul>
        <li
          class="jc-select-search jc-select-search--inline"
        >
          <div
            class="jc-select-search__field__wrap"
          >
            <input
              autocomplete="off"
              class="jc-select-search__field"
              value=""
            />
            <span
              class="jc-select-search__field__mirror"
            >
               
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
